// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/TextInput Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="inline-block w-64"
  >
    <span
      class="svelte-g0pe7x"
    >
       
      <input
        class="svelte-g0pe7x"
        placeholder=""
        type="text"
      />
    </span>
  </span>
</section>
`;

exports[`Storyshots Components/TextInput With Icon And Placeholder 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="inline-block w-64"
  >
    <span
      class="svelte-g0pe7x icon"
    >
      <i
        class="material-icons svelte-g0pe7x"
      >
        search
      </i>
       
      <input
        class="svelte-g0pe7x"
        placeholder="search..."
        type="search"
      />
    </span>
  </span>
</section>
`;

exports[`Storyshots Components/TextInput With Value 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="inline-block w-64"
  >
    <span
      class="svelte-g0pe7x icon"
    >
      <i
        class="material-icons svelte-g0pe7x"
      >
        person
      </i>
       
      <input
        class="svelte-g0pe7x"
        placeholder=""
        type="text"
      />
    </span>
  </span>
</section>
`;
